[fix] navbar z-index

--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -1,5 +1,6 @@
 .nav-bar {
   position: relative;
+  z-index: 200;
   display: flex;
   flex-direction: column;
   width: 100%;
